Fix x-viewpoint overflow
-Main.css

--- a/Main.css
+++ b/Main.css
@@ -13,10 +13,13 @@
 
 html {
     font-size: 65%;
+    width: 100vw;
+    height: 100vh;
+    overflow-x: hidden;
 }
 
 section {
-    padding: 7rem 5%;
+    padding: 7rem 7%;
 }
 
 .btn {
@@ -142,7 +145,6 @@ section {
 /* HOME */
 .home {
     min-height: 100vh;
-    width: 100vw;
     padding-top: 2rem;
     background-image: linear-gradient(rgba(237, 237, 237, 0.548),hsla(0, 0%, 22%, 0.6)), url(images/newbg-transformed.jpeg);
     background-size: cover;
@@ -197,7 +199,6 @@ section {
 /* ABOUT */
 .about {
     background: linear-gradient(rgb(45, 44, 46),hsla(0, 1%, 73%, 0.6));
-    width: 100vw;
 }
 
 .about .about-content {
@@ -230,7 +231,6 @@ section {
 }
 
 @media only screen and (max-width: 480px) {
-
     .btn{
         margin: 1rem;
     }
@@ -242,6 +242,7 @@ section {
     .navbar-menu a {
         font-size: 0.85rem;
         margin-left: 2rem;
+        padding: 15px;
     }
 
     .home .stage .content h3 {
